--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=backend
+
+spring.jpa.open-in-view=true
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/green_cafe
+
+spring.datasource.username=root
+spring.datasource.password=1234
