--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,15 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/green_cafe
 
 spring.datasource.username=root
 spring.datasource.password=1234
+
+# ?? ??? ?? ??
+spring.web.resources.static-locations=classpath:/static/
+
+# MIME ?? ??
+spring.mvc.static-path-pattern=/**
+spring.web.resources.cache.period=0
+spring.web.resources.chain.cache=false
+
+# CSS ? JS ??? MIME ?? ?? ??
+spring.web.resources.mime.mappings.css=text/css
+spring.web.resources.mime.mappings.js=application/javascript
