--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "concurrently \"vite\" \"cd ../backend && ./mvnw spring-boot:run\"",
-    "build": "vite build"
-  },
   "dependencies": {
+    "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1"
@@ -27,5 +24,11 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
+  },
+  "scripts": {
+    "dev": "concurrently \"vite\" \"cd ../backend && ./gradlew bootRun\"",
+    "build": "vite build",
+    "serve": "vite preview",
+    "deploy": "npm run build && cd ../backend && ./gradlew bootRun"
   }
 }
