--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,14 +7,23 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/green_cafe
 spring.datasource.username=root
 spring.datasource.password=1234
 
-# ?? ??? ?? ??
 spring.web.resources.static-locations=classpath:/static/
 
-# MIME ?? ??
 spring.mvc.static-path-pattern=/**
 spring.web.resources.cache.period=0
 spring.web.resources.chain.cache=false
 
-# CSS ? JS ??? MIME ?? ?? ??
 spring.web.resources.mime.mappings.css=text/css
 spring.web.resources.mime.mappings.js=application/javascript
+
+#file
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+file.upload-dir=frontend/uploads
+front.file-dir=http://localhost:5000/uploads/
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.fomat_sql=true
+spring.jpa.show-sql=true
+sspring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
