--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "dependencies": {
+    "axios": "^1.7.9",
     "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -26,9 +27,9 @@
     "vite": "^6.0.5"
   },
   "scripts": {
-    "dev": "concurrently \"vite\" \"cd ../backend && ./gradlew bootRun\"",
-    "build": "vite build",
-    "serve": "vite preview",
-    "deploy": "npm run build && cd ../backend && ./gradlew bootRun"
-  }
+    "dev": "vite --port 5000",
+    "start": "vite --port 5000",
+    "build": "vite build"
+  },
+  "proxy": "http://localhost:8080"
 }
